Couple fixes for tmux panes and removed untracked files for git repos

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,8 +28,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
 bind C-a send-prefix
 
 # better mnemonics for splitting panes!
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 #longer choose-pane time
 set -g display-panes-time 1500
