Fixed new window shortcut

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,7 +98,7 @@ unbind Escape
 #set -g pane-active-border-fg green
 
 #bind n to new-windows
-bind n new-window
+bind n new-window -c "#{pane_current_path}"
 
 #move windows
 bind-key -n C-S-Left swap-window -t -1
