--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 #reset bindings
 source ~/.tmux.reset.conf
+source ~/.tmux.colors.conf
 
 #set to be xterm, not sure why. fixes issues with a lot of things
 set -g default-terminal "screen-256color"
@@ -59,16 +60,13 @@ set -g mouse-select-window off
 # configure contents of status bar
 #set -g status-utf8 on
 set -g status-left-length 40
-#set -g status-left "#[fg=green]\"#S\""
+#set -g status-left "\"#S\""
 set -g status-left ""
-set -g status-right "#[bg=cyan]#[fg=black] #h | %d %b %R "
-
-#pane display color
-set -g display-panes-colour "white"
+set -g status-right "#h | %d %b %R"
 
 #window status bar
-setw -g window-status-format "#[fg=black] #I:#W#F "
-setw -g window-status-current-format "#[bg=cyan]#[fg=black] #I:#W#F "
+setw -g window-status-format "#I:#W#F"
+setw -g window-status-current-format "#I:#W#F"
 
 #set -g status-justify centre
 setw -g monitor-activity on
