Added system-specific overrides. Improved deploy script. Added todo file.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,7 @@
 #reset bindings
 source ~/.tmux.reset.conf
+
+#reset colors
 source ~/.tmux.colors.conf
 
 #set to be xterm, not sure why. fixes issues with a lot of things
@@ -29,8 +31,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
 bind C-a send-prefix
 
 # better mnemonics for splitting panes!
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+bind | split-window -h
+bind - split-window -v
 
 #longer choose-pane time
 set -g display-panes-time 1500
@@ -96,7 +98,7 @@ unbind Escape
 #set -g pane-active-border-fg green
 
 #bind n to new-windows
-bind n new-window -c "#{pane_current_path}"
+bind n new-window
 
 #move windows
 bind-key -n C-S-Left swap-window -t -1
@@ -108,5 +110,8 @@ bind -n C-q display-panes
 #unlimited history
 set -g history-limit 99999
 
-#source powerline!
-#source ~/bin/powerline/powerline/bindings/tmux/powerline.conf
+#handle system specific overrides at the end
+source ~/.tmux.system.conf
+
+#local overrides
+source ~/.tmux.local.conf
