Improved system-specific override files even more

--- a/darwin/tmux.system.conf
+++ b/darwin/tmux.system.conf
@@ -1,8 +1,9 @@
-#mac specific overrides
+#Mac specific overrides
+
+#set tmux window names to be base by default
 set-option -g default-command "base > /dev/null 2>&1; reattach-to-user-namespace -l zsh"
 
-# better mnemonics for splitting panes!
+#mac needs override for new panes to have current pane path
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
-
 bind n new-window -c "#{pane_current_path}"
