Removed dependencies on spf13

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,9 @@ source ~/.tmux.reset.conf
 #reset colors
 source ~/.tmux.colors.conf
 
+# renumber windows sequentially after closing any of them
+set -g renumber-windows on
+
 #set to be xterm, not sure why. fixes issues with a lot of things
 set -g default-terminal "screen-256color"
 
