--- a/.gitmodules
+++ b/.gitmodules
@@ -37,22 +37,22 @@
 [submodule "vim/bundle/neocomplcache.vim"]
 	path = vim/bundle/neocomplcache.vim
 	url = git@github.com:Shougo/neocomplcache.vim.git
-[submodule "vim/vim-less"]
+[submodule "vim/bundle/vim-less"]
 	path = vim/bundle/vim-less
 	url = git@github.com:groenewege/vim-less.git
-[submodule "vim/vim-json"]
+[submodule "vim/bundle/vim-json"]
 	path = vim/bundle/vim-json
 	url = git@github.com:elzr/vim-json.git
-[submodule "vim/HTML-AutoCloseTag"]
+[submodule "vim/bundle/HTML-AutoCloseTag"]
 	path = vim/bundle/HTML-AutoCloseTag
 	url = git@github.com:amirh/HTML-AutoCloseTag.git
-[submodule "vim/vim-css3-syntax"]
+[submodule "vim/bundle/vim-css3-syntax"]
 	path = vim/bundle/vim-css3-syntax
 	url = git@github.com:hail2u/vim-css3-syntax.git
-[submodule "vim/vim-fugitive"]
+[submodule "vim/bundle/vim-fugitive"]
 	path = vim/bundle/vim-fugitive
 	url = git@github.com:tpope/vim-fugitive.git
-[submodule "vim/vim-pathogen"]
+[submodule "vim/autoload/vim-pathogen"]
 	path = vim/autoload/vim-pathogen
 	url = git@github.com:tpope/vim-pathogen.git
 [submodule "vim/bundle/vim-coffee-script"]
