--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule "tmux-colors-solarized"]
 	path = tmux-colors-solarized
 	url = git@github.com:seebi/tmux-colors-solarized.git
-[submodule "vim/autoload/vim-pathogen"]
-	path = vim/vim-pathogen
-	url = git@github.com:tpope/vim-pathogen.git
 [submodule "vim/bundle/nerdtree"]
 	path = vim/bundle/nerdtree
 	url = git@github.com:scrooloose/nerdtree.git
@@ -58,3 +55,6 @@
 [submodule "vim/bundle/vim-coffee-script"]
 	path = vim/bundle/vim-coffee-script
 	url = git@github.com:kchmck/vim-coffee-script.git
+[submodule "vim/vim-pathogen"]
+	path = vim/vim-pathogen
+	url = git@github.com:tpope/vim-pathogen.git
