--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,10 @@ unbind C-b
 set -g prefix C-a
 
 # lower command delay
-set -sg escape-time 1
+set -sg escape-time 0
+
+# switch between last window
+bind-key C-a last-window
 
 # start first window and pane at 1, not zero
 set -g base-index 1
@@ -30,8 +33,8 @@ set -g pane-base-index 1
 # bind r to reloading the config file
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
 
-# pass through a ctrl-a if you press it twice
-bind C-a send-prefix
+# pass through ctrl-a if you press it twice
+bind a send-prefix
 
 # better mnemonics for splitting panes!
 bind | split-window -h
