Legacy branch for old tmux and old vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,9 +2,6 @@
 source ~/.tmux.reset.conf
 source ~/.tmux.colors.conf
 
-# renumber windows sequentially after closing any of them
-set -g renumber-windows on
-
 #set to be xterm, not sure why. fixes issues with a lot of things
 set -g default-terminal "screen-256color"
 
@@ -96,9 +93,7 @@ bind -t vi-copy Escape copy-selection
 unbind Escape
 
 # set up aliases for temporarily maximizing panes
-bind m resize-pane -Z
-# can't bind to C-[ without overwriting escape lol
-bind -n C-] resize-pane -Z
+#bind m resize-pane -Z
 
 # auto window rename
 setw -g automatic-rename off
