Reworked display-panes, and unbound arrow keys

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,13 +53,19 @@ bind -r l select-pane -R
 bind -r [ select-window -t :-
 bind -r ] select-window -t :+
 
+#unbind arrow keys
+unbind Left
+unbind Up
+unbind Right
+unbind Down
+
 # shift-movement keys will resize panes
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# disable mouse support (at least while we're learning)
+# disable mouse support
 setw -g mode-mouse off
 set -g mouse-select-pane off
 set -g mouse-resize-pane off
@@ -112,6 +118,7 @@ bind-key -n C-S-Right swap-window -t +1
 
 #bind q to select pane
 bind -n C-q display-panes
+bind q send-keys C-q
 
 #unlimited history
 set -g history-limit 99999
