--- a/.gitmodules
+++ b/.gitmodules
@@ -58,6 +58,15 @@
 [submodule "vim/vim-pathogen"]
 	path = vim/vim-pathogen
 	url = git@github.com:tpope/vim-pathogen.git
-[submodule "zsh/cdmotion"]
-	path = zsh/cdmotion
-	url = git@github.com:glentakahashi/cdmotion.git
+[submodule "vim/bundle/vim-mustache-handlebars"]
+	path = vim/bundle/vim-mustache-handlebars
+	url = git@github.com:mustache/vim-mustache-handlebars.git
+[submodule "vim/bundle/vim-bufferline"]
+	path = vim/bundle/vim-bufferline
+	url = git@github.com:bling/vim-bufferline.git
+[submodule "zsh/oh-my-zsh"]
+	path = zsh/oh-my-zsh
+	url = git@github.com:robbyrussell/oh-my-zsh.git
+[submodule "zsh/fs-easymotion"]
+	path = zsh/fs-easymotion
+	url = git@github.com:glentakahashi/fs-easymotion.git
