--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "zsh/fs-easymotion"]
 	path = zsh/fs-easymotion
 	url = git@github.com:glentakahashi/fs-easymotion.git
+[submodule "vim/bundle/vim-tmux-navigator"]
+	path = vim/bundle/vim-tmux-navigator
+	url = git@github.com:christoomey/vim-tmux-navigator.git
