--- a/tmux.conf
+++ b/tmux.conf
@@ -44,14 +44,20 @@ bind - split-window -v
 set -g display-panes-time 1500
 
 # vim / xmonad style bindings for pane movement
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+#bind -r h select-pane -L
+#bind -r j select-pane -D
+#bind -r k select-pane -U
+#bind -r l select-pane -R
+# Smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # vim / xmonad style bindings for window movement
-bind -r [ select-window -t :-
-bind -r ] select-window -t :+
+bind -r h select-window -t :-
+bind -r l select-window -t :+
 
 #unbind arrow keys
 unbind Left
@@ -97,14 +103,16 @@ bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 bind -t vi-copy Escape copy-selection
 
+#fucking hate escape doing stuff
+unbind Escape
+
 # set up aliases for temporarily maximizing panes
 bind m resize-pane -Z
+# can't bind to C-[ without overwriting escape lol
+bind -n C-] resize-pane -Z
 
 # auto window rename
 setw -g automatic-rename off
-
-#fucking hate escape doing stuff
-unbind Escape
 
 #highlight the current pane cause i can never figure it out
 #set -g pane-active-border-fg green
