Added gitconfig, moved around some things in tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,5 @@
-#reset bindings
+#reset bindings and colors
 source ~/.tmux.reset.conf
-
-#reset colors
 source ~/.tmux.colors.conf
 
 # renumber windows sequentially after closing any of them
@@ -13,18 +11,17 @@ set -g default-terminal "screen-256color"
 set -g set-titles on
 set -g set-titles-string "#T"
 
-#config found online at https://github.com/davidbrewer/tmux-conf/blob/master/tmux.conf
-# unbind some default keybindings
-unbind C-b
-
 # set prefix key to ctrl-a
+unbind C-b
 set -g prefix C-a
 
 # lower command delay
 set -sg escape-time 0
 
+# pass through ctrl-a if you press it twice
+bind-key C-a send-prefix
 # switch between last window
-bind-key C-a last-window
+bind a last-window
 
 # start first window and pane at 1, not zero
 set -g base-index 1
@@ -33,9 +30,6 @@ set -g pane-base-index 1
 # bind r to reloading the config file
 bind r source-file ~/.tmux.conf \; display "Reloaded tmux config file."
 
-# pass through ctrl-a if you press it twice
-bind a send-prefix
-
 # better mnemonics for splitting panes!
 bind | split-window -h
 bind - split-window -v
@@ -43,11 +37,6 @@ bind - split-window -v
 #longer choose-pane time
 set -g display-panes-time 1500
 
-# vim / xmonad style bindings for pane movement
-#bind -r h select-pane -L
-#bind -r j select-pane -D
-#bind -r k select-pane -U
-#bind -r l select-pane -R
 # Smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
@@ -79,8 +68,8 @@ set -g mouse-select-window off
 
 # configure contents of status bar
 #set -g status-utf8 on
-set -g status-left-length 40
 #set -g status-left "\"#S\""
+set -g status-left-length 40
 set -g status-left ""
 set -g status-right "#h | %d %b %R"
 
@@ -115,7 +104,7 @@ bind -n C-] resize-pane -Z
 setw -g automatic-rename off
 
 #highlight the current pane cause i can never figure it out
-#set -g pane-active-border-fg green
+set -g pane-active-border-fg green
 
 #bind n to new-windows
 bind n new-window
