--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "vim/bundle/vim-tmux-navigator"]
 	path = vim/bundle/vim-tmux-navigator
 	url = git@github.com:christoomey/vim-tmux-navigator.git
+[submodule "vim/bundle/bclose.vim"]
+	path = vim/bundle/bclose.vim
+	url = git@github.com:rbgrouleff/bclose.vim.git
