--- a/tmux.conf
+++ b/tmux.conf
@@ -101,7 +101,7 @@ bind m resize-pane -Z
 bind -n C-] resize-pane -Z
 
 # auto window rename
-setw -g automatic-rename off
+#setw -g automatic-rename off
 
 #highlight the current pane cause i can never figure it out
 set -g pane-active-border-fg green
