--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ set -g prefix C-a
 set -sg escape-time 0
 
 # pass through ctrl-a if you press it twice
-bind-key C-a send-prefix
+bind -n M-a send-prefix
 # switch between last window
 bind a last-window
 
@@ -38,11 +38,17 @@ bind - split-window -v
 set -g display-panes-time 1500
 
 # Smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# Nested tmux sessions
+bind -n M-h send-keys C-h
+bind -n M-j send-keys C-j
+bind -n M-k send-keys C-k
+bind -n M-l send-keys C-l
 
 # vim / xmonad style bindings for window movement
 bind -r h select-window -t :-
@@ -99,6 +105,11 @@ unbind Escape
 bind m resize-pane -Z
 # can't bind to C-[ without overwriting escape lol
 bind -n C-] resize-pane -Z
+bind -n M-] send-keys C-]
+
+#bind q to select pane
+bind -n C-q display-panes
+bind -n M-q send-keys C-q
 
 # auto window rename
 #setw -g automatic-rename off
@@ -113,9 +124,8 @@ bind n new-window
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
-#bind q to select pane
-bind -n C-q display-panes
-bind q send-keys C-q
+#move panes between windows
+bind-key @ command-prompt -p "move pane to:"  "join-pane -t ':%%'"
 
 #unlimited history
 set -g history-limit 99999
