Added meta+1-5 keys to select layout

--- a/tmux.conf
+++ b/tmux.conf
@@ -111,6 +111,13 @@ bind -n M-] send-keys C-]
 bind -n C-q display-panes
 bind -n M-q send-keys C-q
 
+#use meta 1-5 to select layout
+bind -n M-1 select-layout tiled
+bind -n M-2 select-layout even-horizontal
+bind -n M-3 select-layout even-vertical
+bind -n M-4 select-layout main-horizontal
+bind -n M-5 select-layout main-vertical
+
 # auto window rename
 #setw -g automatic-rename off
 
