--- a/tmux.conf
+++ b/tmux.conf
@@ -67,10 +67,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # disable mouse support
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+set -g mouse off
 
 # configure contents of status bar
 #set -g status-utf8 on
