--- a/tmux.conf
+++ b/tmux.conf
@@ -38,12 +38,15 @@ bind - split-window -v
 set -g display-panes-time 1500
 
 # Smart pane switching with awareness of vim splits
+is_zoomed='echo "#{window_zoomed_flag}" | grep 1'
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# TODO: make this more robust
+is_fzf='echo "#{pane_current_command}" | grep -iqE bash'
+bind -n C-h if-shell "$is_vim || $is_fzf || $is_zoomed" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim || $is_fzf || $is_zoomed" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim || $is_fzf || $is_zoomed" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim || $is_fzf || $is_zoomed" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim || $is_fzf || $is_zoomed" "send-keys C-\\" "select-pane -l"
 # Nested tmux sessions
 bind -n M-h send-keys C-h
 bind -n M-j send-keys C-j
@@ -123,6 +126,8 @@ set -g pane-active-border-fg green
 
 #bind n to new-windows
 bind n new-window
+
+#TODO :swap windows
 
 #move windows
 bind-key -n C-S-Left swap-window -t -1
