Fixed fzf bug with setting term=xterm, added new fzf alias

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,6 +38,7 @@ bind - split-window -v
 set -g display-panes-time 1500
 
 # Smart pane switching with awareness of vim splits
+# TODO: fix this for if vim is zoomed, currently vim will unzoom the page because of the plugin
 is_zoomed='echo "#{window_zoomed_flag}" | grep 1'
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 # TODO: make this more robust
