--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,8 @@ set -g renumber-windows on
 #set to be xterm, not sure why. fixes issues with a lot of things
 set -g default-terminal "screen-256color"
 
+# Titles
+set-option -g allow-rename off
 set -g set-titles on
 set -g set-titles-string "#T"
 
