--- a/tmux.conf
+++ b/tmux.conf
@@ -43,13 +43,11 @@ set -g display-panes-time 1500
 # TODO: fix this for if vim is zoomed, currently vim will unzoom the page because of the plugin
 is_zoomed='echo "#{window_zoomed_flag}" | grep 1'
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-# TODO: make this more robust
-is_fzf='echo "#{pane_current_command}" | grep -iqE bash'
-bind -n C-h if-shell "$is_vim || $is_fzf || $is_zoomed" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim || $is_fzf || $is_zoomed" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim || $is_fzf || $is_zoomed" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim || $is_fzf || $is_zoomed" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim || $is_fzf || $is_zoomed" "send-keys C-\\" "select-pane -l"
+bind -n C-h if-shell "$is_vim || $is_zoomed" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim || $is_zoomed" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim || $is_zoomed" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim || $is_zoomed" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim || $is_zoomed" "send-keys C-\\" "select-pane -l"
 # Nested tmux sessions
 bind -n M-h send-keys C-h
 bind -n M-j send-keys C-j
