Added tpm, fixed shortcuts for vim.

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,9 @@
 source ~/.tmux.reset.conf
 source ~/.tmux.colors.conf
 
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
@@ -78,7 +81,7 @@ set -g mouse off
 #set -g status-left "\"#S\""
 set -g status-left-length 40
 set -g status-left ""
-set -g status-right "#h | %d %b %R"
+set -g status-right "#h #{battery_icon}#{battery_percentage} | %d %b %R"
 
 #window status bar
 setw -g window-status-format "#I:#W#F"
@@ -145,3 +148,6 @@ source ~/.tmux.system.conf
 
 #local overrides
 source ~/.tmux.local.conf
+
+#tpm
+run '~/.tmux/plugins/tpm/tpm'
