Added some new shortcuts for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -105,8 +105,15 @@ bind -t vi-copy Escape copy-selection
 #fucking hate escape doing stuff
 unbind Escape
 
-# set up aliases for temporarily maximizing panes
-bind m resize-pane -Z
+unbind t
+bind t setw synchronize-panes
+
+unbind m
+bind m new-session
+
+unbind .
+bind . command-prompt -p "move window to session: " "move-window -t %%:"
+
 # can't bind to C-[ without overwriting escape lol
 bind -n C-] resize-pane -Z
 bind -n M-] send-keys C-]
