Added a ton of fzf aliases

--- a/tmux.conf
+++ b/tmux.conf
@@ -110,6 +110,9 @@ bind t setw synchronize-panes
 
 unbind m
 bind m new-session
+#c-a $ rename
+
+bind-key 0 run "tmux split-window -l 12 'bash -ci ftpane'"
 
 unbind .
 bind . command-prompt -p "move window to session: " "move-window -t %%:"
