Lots of awesome bug fixes

--- a/tmux.conf
+++ b/tmux.conf
@@ -61,6 +61,10 @@ bind -n M-l send-keys C-l
 bind -r h select-window -t :-
 bind -r l select-window -t :+
 
+# allow repeating pane swaps
+bind -r { swap-pane -U
+bind -r } swap-pane -D
+
 #unbind arrow keys
 unbind Left
 unbind Up
