--- a/tmux.conf
+++ b/tmux.conf
@@ -116,7 +116,7 @@ unbind m
 bind m new-session
 #c-a $ rename
 
-bind-key 0 run "tmux split-window -l 12 'bash -ci ftpane'"
+#bind-key 0 run "tmux split-window -l 12 'bash -ci ftpane'"
 
 unbind .
 bind . command-prompt -p "move window to session: " "move-window -t %%:"
