--- a/tmux.conf
+++ b/tmux.conf
@@ -156,6 +156,7 @@ bind-key @ command-prompt -p "move pane to:"  "join-pane -t ':%%'"
 
 #unlimited history
 set -g history-limit 99999
+bind k clear-history
 
 #handle system specific overrides at the end
 source ~/.tmux.system.conf
