--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,9 @@ source ~/.tmux.colors.conf
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
