--- a/tmux.conf
+++ b/tmux.conf
@@ -105,9 +105,9 @@ setw -g mode-keys vi
 bind y copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
-bind -t vi-copy Escape copy-selection
+bind -T copy-mode-vi 'v' send-keys -X begin-selection
+bind -T copy-mode-vi 'y' send-keys -X copy-selection
+bind -T copy-mode-vi Escape send-keys -X copy-selection
 
 #fucking hate escape doing stuff
 unbind Escape
