--- a/tmux.conf
+++ b/tmux.conf
@@ -88,7 +88,7 @@ set -g mouse off
 #set -g status-left "\"#S\""
 set -g status-left-length 40
 set -g status-left ""
-set -g status-right "#h #{battery_icon}#{battery_percentage} | %d %b %R"
+set -g status-right "#h #{battery_icon} #{battery_percentage} | %d %b %R"
 
 #window status bar
 setw -g window-status-format "#I:#W#F"
@@ -143,7 +143,10 @@ bind -n M-5 select-layout main-vertical
 #setw -g automatic-rename off
 
 #highlight the current pane cause i can never figure it out
-set -g pane-active-border-fg green
+set -g pane-border-fg green
+set -g pane-active-border-bg white
+#set -g window-style 'fg=colour247,bg=colour236'
+#set -g window-active-style 'fg=colour250,bg=black'
 
 #bind n to new-windows
 bind n new-window
