--- a/tmux.conf
+++ b/tmux.conf
@@ -1,12 +1,12 @@
 #reset bindings and colors
 source ~/.tmux.reset.conf
-source ~/.tmux.colors.conf
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'seebi/tmux-colors-solarized'
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
@@ -144,9 +144,10 @@ bind -n M-5 select-layout main-vertical
 
 #highlight the current pane cause i can never figure it out
 set -g pane-border-fg green
+set -g pane-border-bg colour236
 set -g pane-active-border-bg white
-#set -g window-style 'fg=colour247,bg=colour236'
-#set -g window-active-style 'fg=colour250,bg=black'
+set -g window-style 'fg=colour247,bg=colour235'
+set -g window-active-style 'fg=terminal,bg=terminal'
 
 #bind n to new-windows
 bind n new-window
