Fix colors again

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'seebi/tmux-colors-solarized'
 
+#tpm
+run '~/.tmux/plugins/tpm/tpm'
+
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
@@ -143,9 +146,8 @@ bind -n M-5 select-layout main-vertical
 #setw -g automatic-rename off
 
 #highlight the current pane cause i can never figure it out
-set -g pane-border-fg green
-set -g pane-border-bg colour236
-set -g pane-active-border-bg white
+set -g pane-border-style 'fg=green,bg=colour235'
+set -g pane-active-border-style 'fg=green,bg=default'
 set -g window-style 'fg=colour247,bg=colour235'
 set -g window-active-style 'fg=terminal,bg=terminal'
 
@@ -171,5 +173,3 @@ source ~/.tmux.system.conf
 #local overrides
 source ~/.tmux.local.conf
 
-#tpm
-run '~/.tmux/plugins/tpm/tpm'
