--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'glentakahashi/tmux-colors-solarized'
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
@@ -53,7 +53,7 @@ bind -n C-h if-shell "$is_vim || $is_zoomed" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim || $is_zoomed" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim || $is_zoomed" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim || $is_zoomed" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim || $is_zoomed" "send-keys C-\\" "select-pane -l"
+bind -n C-\\ if-shell "$is_vim || $is_zoomed" "send-keys C-\\" "select-pane -l"
 # Nested tmux sessions
 bind -n M-h send-keys C-h
 bind -n M-j send-keys C-j
@@ -64,9 +64,7 @@ bind -n M-l send-keys C-l
 bind -r h select-window -t :-
 bind -r l select-window -t :+
 
-# allow repeating pane swaps
-bind -r { swap-pane -U
-bind -r } swap-pane -D
+bind v swap-pane -s '!' -t $TMUX_PANE
 
 #unbind arrow keys
 unbind Left
