--- a/tmux.conf
+++ b/tmux.conf
@@ -46,9 +46,9 @@ bind - split-window -v
 set -g display-panes-time 1500
 
 # Smart pane switching with awareness of vim splits
-# TODO: fix this for if vim is zoomed, currently vim will unzoom the page because of the plugin
+# See: https://github.com/christoomey/vim-tmux-navigator
 is_zoomed='echo "#{window_zoomed_flag}" | grep 1'
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind -n C-h if-shell "$is_vim || $is_zoomed" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim || $is_zoomed" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim || $is_zoomed" "send-keys C-k" "select-pane -U"
