--- a/tmux.conf
+++ b/tmux.conf
@@ -146,8 +146,8 @@ bind n new-window
 #TODO :swap windows
 
 #move windows
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+bind-key -n C-S-Left swap-window -t -1 \; select-window -t -1
+bind-key -n C-S-Right swap-window -t +1 \; select-window -t +1
 
 #move panes between windows
 bind-key @ command-prompt -p "move pane to:"  "join-pane -t ':%%'"
