--- a/tmux.conf
+++ b/tmux.conf
@@ -48,12 +48,15 @@ set -g display-panes-time 1500
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_zoomed='echo "#{window_zoomed_flag}" | grep 1'
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind -n C-h if-shell "$is_vim || $is_zoomed" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim || $is_zoomed" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim || $is_zoomed" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim || $is_zoomed" "send-keys C-l" "select-pane -R"
-bind -n C-\\ if-shell "$is_vim || $is_zoomed" "send-keys C-\\" "select-pane -l"
+#not_tmux="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# needed because of crowdstrike bug
+# https://github.com/christoomey/vim-tmux-navigator/issues/417
+not_tmux="ps -o tty= -o state= -o comm= | grep -iqE '^#{s|/dev/||:pane_tty} ^[^TXZ ]+ +(\\S+\\/)?(g?(view|(n|l)?vim?x?)(diff)?|fzf)$"
+bind -n C-h if-shell "$not_tmux || $is_zoomed" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$not_tmux || $is_zoomed" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$not_tmux || $is_zoomed" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$not_tmux || $is_zoomed" "send-keys C-l" "select-pane -R"
+bind -n C-\\ if-shell "$not_tmux || $is_zoomed" "send-keys C-\\" "select-pane -l"
 # Nested tmux sessions
 bind -n M-h send-keys C-h
 bind -n M-j send-keys C-j
@@ -112,6 +115,8 @@ unbind Escape
 
 unbind t
 bind t setw synchronize-panes
+
+bind R respawn-pane -k
 
 unbind m
 bind m new-session
